--- a/timothy.html
+++ b/timothy.html
@@ -110,7 +110,7 @@
 
     <section class="grid" aria-label="Subject list">
       <a class="subject" href="https://missk527.github.io/minrhetoric-game/" target="_blank" rel="noopener">English</a>
-      <a class="subject" href="https://missk527.github.io/eng/17e.html" target="_blank" rel="noopener">English Writing</a>
+      <a class="subject" href="https://missk527.github.io/eng/19e.html" target="_blank" rel="noopener">English Writing</a>
             <a class="subject" href="https://missk527.github.io/gcse/eng.html" target="_blank" rel="noopener">交英文writing</a>
        <a class="subject" href="https://missk527.github.io/gcse/tran.html" target="_blank" rel="noopener">English grammar</a>
       <a class="subject" href="https://missk527.github.io/Y11/bioflashcard.html" target="_blank" rel="noopener">Biology Flashcard</a>
@@ -119,9 +119,9 @@
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
-      <a class="subject" href="https://missk527.github.io/bio/33d.html" target="_blank" rel="noopener">Biology</a>
-      <a class="subject" href="https://missk527.github.io/chem/19a.html" target="_blank" rel="noopener">Chemistry</a>
-      <a class="subject" href="https://missk527.github.io/phy/19e.html" target="_blank" rel="noopener">Physic</a>
+      <a class="subject" href="https://missk527.github.io/bio/34p.html" target="_blank" rel="noopener">Biology</a>
+      <a class="subject" href="https://missk527.github.io/chem/20m.html" target="_blank" rel="noopener">Chemistry</a>
+      <a class="subject" href="https://missk527.github.io/phy/20n.html" target="_blank" rel="noopener">Physic</a>
       <a class="subject" href="https://missk527.github.io/math/y717.html" target="_blank" rel="noopener">Mathematics</a>
     </section>
   </main>
