--- a/isaac.html
+++ b/isaac.html
@@ -119,8 +119,8 @@
       <a class="subject" href="https://missk527.github.io/Y11/chemquiz.html" target="_blank" rel="noopener">Chemistry Quiz</a>
         <a class="subject" href="https://missk527.github.io/Y11/phyflashcard.html" target="_blank" rel="noopener">Physics Flashcard</a>
       <a class="subject" href="https://missk527.github.io/Y11/phymcquiz.html" target="_blank" rel="noopener">Physics Quiz</a>
-      <a class="subject" href="https://missk527.github.io/bio/58ba.html" target="_blank" rel="noopener">Biology</a>
-      <a class="subject" href="https://missk527.github.io/chem/51ap.html" target="_blank" rel="noopener">Chemistry</a>
+      <a class="subject" href="https://missk527.github.io/bio/59a.html" target="_blank" rel="noopener">Biology</a>
+      <a class="subject" href="https://missk527.github.io/chem/52c.html" target="_blank" rel="noopener">Chemistry</a>
       <a class="subject" href="https://missk527.github.io/phy/57nt.html" target="_blank" rel="noopener">Physic</a>
       <a class="subject" href="https://missk527.github.io/math/y717.html" target="_blank" rel="noopener">Mathematics</a>
     </section>
